# curve-fit

./: .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  eslint.config.js  eslint.config.mjs  fix-plot-mjs-index.sh  index.html  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: eslint.yml  pages.yml  pyright.yml  release.yml
b/: example_20_program.json  index.html  loc-viz.tsx  loc.tsx  main.tsx  style.css
cartesian/: .npmrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
cartesian/src/: app.tsx  fallback.tsx  index.tsx  noto-emoji.ts  routes.tsx
cartesian/src/pages/: empty.ts  home.tsx
cartesian/src/pages/plot/: cartesian.tsx
cartesian/src/wgsl/: test.wgsl.d.ts
genjax_blocks/: __init__.py  blocks.py
notebooks/: blocks.ipynb  intro.ipynb  intro.py  investigation.py  tutorial.py
notebooks/blocks/: __init__.py  blocks.py
scripts/: run_eslint.sh
src/: App.css  App.tsx  animator.ts  fallback.tsx  fps_counter.ts  gpgpu.ts  jax_data.txt  live.tsx  main.ts  main.tsx  model.ts  modules.d.ts  plot.tsx  render.ts  shaders.ts  stats.spec.ts  stats.ts  style.css  utils.ts  vertex.glsl  webgl.ts
stat/: index.html  stat-lib.wgsl  stat.css  stat.tsx
