[tool.poetry]
name = "curve-fit"
version = "0.1.0"
description = "Curve Fit Demonstration for GenJAX"
authors = ["Colin Smith <colin.smith@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.3, <3.13"
genjax = { version = "0.4.0", source = "gcp" }
genstudio = {version = "v2024.06.20.1130", source = "gcp"}
# genstudio = {path = "../gen-studio", develop = true}
jax = { version="^0.4.28", extras = ["cpu"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
nbmake = "^1.5.3"
jupytext = "^1.16.2"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12.3"
include = ["src", "notebooks"]

[[tool.poetry.source]]
name = "gcp"
url = "https://us-west1-python.pkg.dev/probcomp-caliban/probcomp/simple/"
priority = "explicit"

[tool.jupytext]
formats = "ipynb,py:percent"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
