[tool.poetry]
name = "genjax-blocks"
# Leave this at 0.0.0; this key can't be missing, but it's subbed out
# dynamically by `poetry.dynamic-versioning`.
version = "0.0.0"
description = "Curve Fit Demonstration for GenJAX"
authors = ["Colin Smith <colin.smith@gmail.com>"]
license = "MIT"
readme = "README.md"
#package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
genjax = { version = "0.5.0.post31.dev0+e828327f", source = "gcp" }
genstudio = {version = "2024.7.24.1802", source = "gcp"}
# genstudio = {path = "../gen-studio", develop = true}
jax = { version="^0.4.24", extras = ["cpu"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
nbmake = "^1.5.3"
jupytext = "^1.16.2"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
include = ["src", "notebooks"]


[tool.ruff.format]
# Ruff format chokes on %pip statments in colab preamble.
# We will forego Ruff formatting until the relevant libraries
# are public and the preamble is no longer needed.
exclude = ["notebooks/intro.py"]

[tool.ruff.lint.per-file-ignores]
"notebooks/intro.py" = ["E999"]

[[tool.poetry.source]]
name = "gcp"
url = "https://us-west1-python.pkg.dev/probcomp-caliban/probcomp/simple/"
priority = "explicit"

[tool.jupytext]
formats = "ipynb,py:percent"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
